[gd_scene load_steps=43 format=2]

[ext_resource path="res://SYSTEMS/MAIN/MAIN.gd" type="Script" id=1]
[ext_resource path="res://RESOURCES/PICTURES/pixel-256x256.png" type="Texture" id=2]
[ext_resource path="res://RESOURCES/PICTURES/AREA_BUTTON_LOADING.png" type="Texture" id=3]
[ext_resource path="res://SYSTEMS/INTERFACES/NEXT_LEVEL_AREA_BUTTON.gd" type="Script" id=4]
[ext_resource path="res://RESOURCES/PICTURES/icon.png" type="Texture" id=5]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 64, 16, 48, 16, 48, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 64, 64, 48, 64, 48, 48, 64, 48 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 48, 16, 48, 16, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 64, 16, 0, 16, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 16, 64, 0, 64, 0, 48, 16, 48 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 64, 64, 48, 64, 48, 48, 64, 48 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 16, 64, 0, 64, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 64, 64, 48, 64, 48, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 16, 16, 16, 16, 16, 64, 0, 64, 0, 0, 64, 0, 64, 64, 48, 64, 48, 16 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 16, 0, 16, 48, 64, 48, 64, 64, 0, 64, 0, 0 )

[sub_resource type="ConvexPolygonShape2D" id=12]
points = PoolVector2Array( 64, 16, 48, 16, 48, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=13]
points = PoolVector2Array( 64, 16, 16, 16, 16, 48, 64, 48, 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=14]
points = PoolVector2Array( 16, 0, 16, 48, 48, 48, 48, 0, 64, 0, 64, 64, 0, 64, 0, 0 )

[sub_resource type="ConvexPolygonShape2D" id=15]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=16]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=17]
points = PoolVector2Array( 64, 64, 48, 64, 48, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=18]
points = PoolVector2Array( 0, 48, 16, 48, 16, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=19]
points = PoolVector2Array( 0, 0, 0, 0, 64, 0, 64, 64, 48, 64, 48, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=20]
points = PoolVector2Array( 16, 64, 0, 64, 0, 48, 16, 48 )

[sub_resource type="ConvexPolygonShape2D" id=21]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=22]
points = PoolVector2Array( 64, 16, 48, 16, 48, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=23]
points = PoolVector2Array( 64, 64, 0, 64, 0, 48, 64, 48 )

[sub_resource type="ConvexPolygonShape2D" id=24]
points = PoolVector2Array( 64, 16, 0, 16, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=25]
points = PoolVector2Array( 64, 64, 0, 64, 0, 48, 64, 48 )

[sub_resource type="ConvexPolygonShape2D" id=26]
points = PoolVector2Array( 0, 48, 0, 48, 48, 48, 48, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=27]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=28]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64, 0, 48, 48, 48, 48, 16, 0, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=29]
points = PoolVector2Array( 64, 16, 48, 16, 48, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=30]
points = PoolVector2Array( 64, 64, 48, 64, 48, 48, 64, 48 )

[sub_resource type="ConvexPolygonShape2D" id=31]
points = PoolVector2Array( 16, 64, 0, 64, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=32]
points = PoolVector2Array( 64, 16, 64, 16, 16, 16, 16, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=33]
points = PoolVector2Array( 64, 64, 48, 64, 48, 48, 64, 48 )

[sub_resource type="TileSet" id=34]
resource_local_to_scene = true
0/name = "0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [  ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 64, 64 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 64, 0, 64, 64 )
1/tile_mode = 1
1/autotile/bitmask_mode = 1
1/autotile/bitmask_flags = [  ]
1/autotile/icon_coordinate = Vector2( 0, 0 )
1/autotile/tile_size = Vector2( 64, 64 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 5 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "2"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 128, 0, 64, 64 )
2/tile_mode = 1
2/autotile/bitmask_mode = 1
2/autotile/bitmask_flags = [  ]
2/autotile/icon_coordinate = Vector2( 2, 2 )
2/autotile/tile_size = Vector2( 64, 64 )
2/autotile/spacing = 0
2/autotile/occluder_map = [  ]
2/autotile/navpoly_map = [  ]
2/autotile/priority_map = [  ]
2/autotile/z_index_map = [  ]
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 16 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 16 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 17 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 18 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "3"
3/texture = ExtResource( 2 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 192, 0, 64, 64 )
3/tile_mode = 1
3/autotile/bitmask_mode = 1
3/autotile/bitmask_flags = [  ]
3/autotile/icon_coordinate = Vector2( 0, 0 )
3/autotile/tile_size = Vector2( 64, 64 )
3/autotile/spacing = 0
3/autotile/occluder_map = [  ]
3/autotile/navpoly_map = [  ]
3/autotile/priority_map = [  ]
3/autotile/z_index_map = [  ]
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 19 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 19 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 20 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "4"
4/texture = ExtResource( 2 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 64, 64, 64 )
4/tile_mode = 1
4/autotile/bitmask_mode = 1
4/autotile/bitmask_flags = [  ]
4/autotile/icon_coordinate = Vector2( 0, 0 )
4/autotile/tile_size = Vector2( 64, 64 )
4/autotile/spacing = 0
4/autotile/occluder_map = [  ]
4/autotile/navpoly_map = [  ]
4/autotile/priority_map = [  ]
4/autotile/z_index_map = [  ]
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 21 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 21 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 22 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 23 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
5/name = "5"
5/texture = ExtResource( 2 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 64, 64, 64, 64 )
5/tile_mode = 1
5/autotile/bitmask_mode = 1
5/autotile/bitmask_flags = [  ]
5/autotile/icon_coordinate = Vector2( 0, 0 )
5/autotile/tile_size = Vector2( 64, 64 )
5/autotile/spacing = 0
5/autotile/occluder_map = [  ]
5/autotile/navpoly_map = [  ]
5/autotile/priority_map = [  ]
5/autotile/z_index_map = [  ]
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape = SubResource( 24 )
5/shape_one_way = false
5/shape_one_way_margin = 1.0
5/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 24 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 25 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
5/z_index = 0
6/name = "6"
6/texture = ExtResource( 2 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 128, 64, 64, 64 )
6/tile_mode = 1
6/autotile/bitmask_mode = 1
6/autotile/bitmask_flags = [  ]
6/autotile/icon_coordinate = Vector2( 0, 0 )
6/autotile/tile_size = Vector2( 64, 64 )
6/autotile/spacing = 0
6/autotile/occluder_map = [  ]
6/autotile/navpoly_map = [  ]
6/autotile/priority_map = [  ]
6/autotile/z_index_map = [  ]
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape = SubResource( 26 )
6/shape_one_way = false
6/shape_one_way_margin = 1.0
6/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 26 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 27 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
6/z_index = 0
7/name = "7"
7/texture = ExtResource( 2 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 192, 64, 64, 64 )
7/tile_mode = 1
7/autotile/bitmask_mode = 1
7/autotile/bitmask_flags = [  ]
7/autotile/icon_coordinate = Vector2( 0, 0 )
7/autotile/tile_size = Vector2( 64, 64 )
7/autotile/spacing = 0
7/autotile/occluder_map = [  ]
7/autotile/navpoly_map = [  ]
7/autotile/priority_map = [  ]
7/autotile/z_index_map = [  ]
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape = SubResource( 28 )
7/shape_one_way = false
7/shape_one_way_margin = 1.0
7/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 28 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
7/z_index = 0
8/name = "8"
8/texture = ExtResource( 2 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 0, 128, 64, 64 )
8/tile_mode = 1
8/autotile/bitmask_mode = 1
8/autotile/bitmask_flags = [  ]
8/autotile/icon_coordinate = Vector2( 0, 0 )
8/autotile/tile_size = Vector2( 64, 64 )
8/autotile/spacing = 0
8/autotile/occluder_map = [  ]
8/autotile/navpoly_map = [  ]
8/autotile/priority_map = [  ]
8/autotile/z_index_map = [  ]
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape = SubResource( 29 )
8/shape_one_way = false
8/shape_one_way_margin = 1.0
8/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 29 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 30 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 31 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
8/z_index = 0
9/name = "9"
9/texture = ExtResource( 2 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 64, 128, 64, 64 )
9/tile_mode = 1
9/autotile/bitmask_mode = 1
9/autotile/bitmask_flags = [  ]
9/autotile/icon_coordinate = Vector2( 0, 0 )
9/autotile/tile_size = Vector2( 64, 64 )
9/autotile/spacing = 0
9/autotile/occluder_map = [  ]
9/autotile/navpoly_map = [  ]
9/autotile/priority_map = [  ]
9/autotile/z_index_map = [  ]
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape = SubResource( 32 )
9/shape_one_way = false
9/shape_one_way_margin = 1.0
9/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 32 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 33 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
9/z_index = 0
10/name = "10"
10/texture = ExtResource( 2 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 128, 128, 64, 64 )
10/tile_mode = 1
10/autotile/bitmask_mode = 1
10/autotile/bitmask_flags = [  ]
10/autotile/icon_coordinate = Vector2( 0, 0 )
10/autotile/tile_size = Vector2( 64, 64 )
10/autotile/spacing = 0
10/autotile/occluder_map = [  ]
10/autotile/navpoly_map = [  ]
10/autotile/priority_map = [  ]
10/autotile/z_index_map = [  ]
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape = SubResource( 8 )
10/shape_one_way = false
10/shape_one_way_margin = 1.0
10/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
10/z_index = 0
11/name = "11"
11/texture = ExtResource( 2 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 192, 128, 64, 64 )
11/tile_mode = 1
11/autotile/bitmask_mode = 1
11/autotile/bitmask_flags = [  ]
11/autotile/icon_coordinate = Vector2( 0, 0 )
11/autotile/tile_size = Vector2( 64, 64 )
11/autotile/spacing = 0
11/autotile/occluder_map = [  ]
11/autotile/navpoly_map = [  ]
11/autotile/priority_map = [  ]
11/autotile/z_index_map = [  ]
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shape_offset = Vector2( 0, 0 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
11/shape = SubResource( 10 )
11/shape_one_way = false
11/shape_one_way_margin = 1.0
11/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
11/z_index = 0
12/name = "12"
12/texture = ExtResource( 2 )
12/tex_offset = Vector2( 0, 0 )
12/modulate = Color( 1, 1, 1, 1 )
12/region = Rect2( 0, 192, 64, 64 )
12/tile_mode = 1
12/autotile/bitmask_mode = 1
12/autotile/bitmask_flags = [  ]
12/autotile/icon_coordinate = Vector2( 0, 0 )
12/autotile/tile_size = Vector2( 64, 64 )
12/autotile/spacing = 0
12/autotile/occluder_map = [  ]
12/autotile/navpoly_map = [  ]
12/autotile/priority_map = [  ]
12/autotile/z_index_map = [  ]
12/occluder_offset = Vector2( 0, 0 )
12/navigation_offset = Vector2( 0, 0 )
12/shape_offset = Vector2( 0, 0 )
12/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
12/shape = SubResource( 11 )
12/shape_one_way = false
12/shape_one_way_margin = 1.0
12/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 12 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
12/z_index = 0
13/name = "13"
13/texture = ExtResource( 2 )
13/tex_offset = Vector2( 0, 0 )
13/modulate = Color( 1, 1, 1, 1 )
13/region = Rect2( 64, 192, 64, 64 )
13/tile_mode = 1
13/autotile/bitmask_mode = 1
13/autotile/bitmask_flags = [  ]
13/autotile/icon_coordinate = Vector2( 0, 0 )
13/autotile/tile_size = Vector2( 64, 64 )
13/autotile/spacing = 0
13/autotile/occluder_map = [  ]
13/autotile/navpoly_map = [  ]
13/autotile/priority_map = [  ]
13/autotile/z_index_map = [  ]
13/occluder_offset = Vector2( 0, 0 )
13/navigation_offset = Vector2( 0, 0 )
13/shape_offset = Vector2( 0, 0 )
13/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
13/shape = SubResource( 13 )
13/shape_one_way = false
13/shape_one_way_margin = 1.0
13/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 13 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
13/z_index = 0
14/name = "14"
14/texture = ExtResource( 2 )
14/tex_offset = Vector2( 0, 0 )
14/modulate = Color( 1, 1, 1, 1 )
14/region = Rect2( 128, 192, 64, 64 )
14/tile_mode = 1
14/autotile/bitmask_mode = 1
14/autotile/bitmask_flags = [  ]
14/autotile/icon_coordinate = Vector2( 0, 0 )
14/autotile/tile_size = Vector2( 64, 64 )
14/autotile/spacing = 0
14/autotile/occluder_map = [  ]
14/autotile/navpoly_map = [  ]
14/autotile/priority_map = [  ]
14/autotile/z_index_map = [  ]
14/occluder_offset = Vector2( 0, 0 )
14/navigation_offset = Vector2( 0, 0 )
14/shape_offset = Vector2( 0, 0 )
14/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
14/shape = SubResource( 14 )
14/shape_one_way = false
14/shape_one_way_margin = 1.0
14/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 14 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
14/z_index = 0
15/name = "15"
15/texture = ExtResource( 2 )
15/tex_offset = Vector2( 0, 0 )
15/modulate = Color( 1, 1, 1, 1 )
15/region = Rect2( 192, 192, 64, 64 )
15/tile_mode = 1
15/autotile/bitmask_mode = 1
15/autotile/bitmask_flags = [  ]
15/autotile/icon_coordinate = Vector2( 0, 0 )
15/autotile/tile_size = Vector2( 64, 64 )
15/autotile/spacing = 0
15/autotile/occluder_map = [  ]
15/autotile/navpoly_map = [  ]
15/autotile/priority_map = [  ]
15/autotile/z_index_map = [  ]
15/occluder_offset = Vector2( 0, 0 )
15/navigation_offset = Vector2( 0, 0 )
15/shape_offset = Vector2( 0, 0 )
15/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
15/shape = SubResource( 15 )
15/shape_one_way = false
15/shape_one_way_margin = 1.0
15/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 15 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
15/z_index = 0

[sub_resource type="RectangleShape2D" id=35]
extents = Vector2( 32, 32 )

[sub_resource type="Animation" id=36]
tracks/0/type = "value"
tracks/0/path = NodePath("..:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.2, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=37]
tracks/0/type = "value"
tracks/0/path = NodePath("..:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.2, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="MAIN" type="Node2D"]
script = ExtResource( 1 )

[node name="TILE_MAP" type="TileMap" parent="."]
z_index = -128
tile_set = SubResource( 34 )
collision_bounce = 0.5
collision_layer = 2
collision_mask = 2147483649
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 1, 0, 2, 2, 0, 3, 3, 0, 65536, 4, 0, 65537, 5, 0, 65538, 6, 0, 65539, 7, 0, 131072, 8, 0, 131073, 9, 0, 131074, 10, 0, 131075, 11, 0, 196608, 12, 0, 196609, 13, 0, 196610, 14, 0, 196611, 15, 0 )

[node name="NEXT_LEVEL" type="Sprite" parent="."]
position = Vector2( 32, 32 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )
script = ExtResource( 4 )

[node name="AREA" type="Area2D" parent="NEXT_LEVEL"]
position = Vector2( 1.43051e-06, 2.86102e-06 )
collision_layer = 0

[node name="SHAPE" type="CollisionShape2D" parent="NEXT_LEVEL/AREA"]
position = Vector2( 7.62939e-06, 1.90735e-06 )
shape = SubResource( 35 )

[node name="TIMER" type="Timer" parent="NEXT_LEVEL"]
wait_time = 0.02

[node name="PROGRESS" type="TextureProgress" parent="NEXT_LEVEL"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -68.0
margin_top = -68.0
margin_right = 4.0
margin_bottom = 4.0
value = 100.0
texture_progress = ExtResource( 3 )
fill_mode = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GLOBAL_CAMERA" type="Camera2D" parent="."]

[node name="ANIMATION_PLAYER" type="AnimationPlayer" parent="."]
anims/CLOSE = SubResource( 36 )
anims/INIT = SubResource( 37 )
[connection signal="OPEN" from="NEXT_LEVEL" to="." method="_on_NEXT_LEVEL_OPEN"]
[connection signal="body_entered" from="NEXT_LEVEL/AREA" to="NEXT_LEVEL" method="_on_AREA_body_entered"]
[connection signal="body_exited" from="NEXT_LEVEL/AREA" to="NEXT_LEVEL" method="_on_AREA_body_exited"]
